src/main/java/lesson/example/java/core/lesson07/isp/good/Swimable.java
package lesson.example.java.core.lesson07.isp.good;

public interface Swimable {

    void swim();
}
