src/main/java/lesson/example/java/core/lesson07/isp/bad/BirdApp.java
package lesson.example.java.core.lesson07.isp.bad;

public class BirdApp {

    public static void main(String[] args) {
        Bird b = new Eagle();
        b.swim();
    }
}
